try setting up so that phone rotation prevents x-overflow

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  padding: env(safe-area-inset);
+}
+
+body {
+  position: relative;
+}
+
+html,
+body {
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   @apply bg-gray-50;
   @apply text-gray-800;
